# rust-web-framework

./: .env  Cargo.toml  README.md  docker-compose.yml  justfile
crates/cargo-elfdev/: Cargo.toml
crates/cargo-elfdev/src/: main.rs
crates/elf/: Cargo.toml
crates/elf/src/: main.rs
crates/elf/templates/: layout.html
static/: foo.html  index.html
