[package]
edition = "2021"
name = "cargo-elfdev"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.0.0"
axum = {version = "0.6.20", features = ["ws"]}
axum-macros = "0.3.8"
color-eyre = "0.6.2"
futures = "0.3.29"
hyper = "0.14.27"
notify = "6.1.1"
tokio = {version = "1.33.0", features = ["full"]}
tokio-util = "0.7.10"
tower = "0.4.13"
tower-http = {version = "0.4.4", features = ["trace"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
