[package]
edition = "2021"
name = "elf"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.3.0"
axum = {version = "0.6.20", features = ["macros"]}
color-eyre = "0.6.2"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = {version = "0.7.2", features = ["postgres", "runtime-tokio"]}
tokio = {version = "1.33.0", features = ["full"]}
tower = "0.4.13"
tower-http = {version = "0.4.4", features = ["trace", "fs"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
